# turbo-octo-waffle-the-game

./: .gitignore  CMakeLists.txt  LICENSE  Notes  README.md
application/: CMakeLists.txt  main.cpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
cnfg/: config.txt
src/: CMakeLists.txt  main.cpp
src/Drawable/: Drawable.cpp  Drawable.h
src/Resource/: CMakeLists.txt  Resource.cpp  Resource.h  TextureManager.cpp  TextureManager.h
src/System/: CMakeLists.txt  Context.cpp  Context.h  Exception.h  Game.cpp  Game.h  Quadtree.h  Square2D.cpp  Square2D.h  Vector2D.cpp  Vector2D.h  Vector2Df.cpp  Vector2Df.h  Window.cpp  Window.h
src/System/Configuration/: CMakeLists.txt  Configuration.cpp  Configuration.h  LevelConfiguration.cpp  LevelConfiguration.h  SystemConfiguration.cpp  SystemConfiguration.h
src/System/Configuration/File/: CMakeLists.txt  FileReader.cpp  FileReader.h
src/System/Controller/: Controller.cpp  Controller.h  Controllers.h  PlayerController.cpp  PlayerController.h  SkeletonController.cpp  SkeletonController.h
src/System/Drawable/: CMakeLists.txt  Canvas.cpp  Canvas.h  Drawable.cpp  Drawable.h
src/System/Entity/: BaseProperty.h  CMakeLists.txt  Entity.cpp  Entity.h  Property.h
src/System/Entity/Property/: Animation.cpp  Animation.h  CMakeLists.txt  Drawable.cpp  Drawable.h  EntityState.h  Equiment.cpp  Equiment.h  Equipment.cpp  Equipment.h  HitBox.h  Hitbox.h  Position.h  Properties.h  SatefulDrawable.cpp  SatefulDrawable.h  StatefulDrawable.cpp  StatefulDrawable.h
src/System/Factory/: BackgroundFactory.cpp  BackgroundFactory.h  CMakeLists.txt  Factories.h  ObjectFactory.cpp  ObjectFactory.h  PlayerFactory.cpp  PlayerFactory.h  SkeletonFactory.cpp  SkeletonFactory.h
src/System/Layer/: BackgroundLayer.cpp  BackgroundLayer.h  CMakeLists.txt  Layer.h  UserInformationLayer.cpp  UserInformationLayer.h
src/System/Layer/Background/: BackgroundLayer.cpp  BackgroundLayer.h
src/System/Layer/Userinterface/: UserInformationLayer.cpp  UserInformationLayer.h
src/Window/: CMakeLists.txt  Camera.cpp  Camera.h  Window.cpp  Window.h
src/World/: CMakeLists.txt  Chunk.cpp  Chunk.h  InitalizationMapper.cpp  InitalizationMapper.h  WorldObject.cpp  WorldObject.h
src/World/BuildingBlocks/: CMakeLists.txt  Chunk.cpp  Chunk.h  Tile.cpp  Tile.h
src/World/Objects/: BackgroundObject.cpp  BackgroundObject.h  CMakeLists.txt  Item.cpp  Item.h  ItemDescriptions.h  Items.h  Marker.cpp  Marker.h  Player.cpp  Player.h  Skeleton.cpp  Skeleton.h
src/World/Objects/Item/: CMakeLists.txt  WeaponItem.cpp  WeaponItem.h
src/window/: Camera.cpp  Camera.h  Window.cpp
